# Alexandria

./: .gitignore  README.md  library.py  pyproject.toml  resume.md  resume.py  thesis.md  thesis.py
.github/workflows/: test_library.yml
alexandria/: create_db.py  get_embedding_function.py  librarian.py  librarian_test.py  library.py  simple.py  update_db.py
tests/: unit_test.py
